--- a/faceapp/videoapp/templates/videoapp/home.html
+++ b/faceapp/videoapp/templates/videoapp/home.html
@@ -3,7 +3,7 @@
 {% block content %}
   <ul>
     <li>
-      <a href="{% url 'video_form' %}">Video_Form</a>
+      <a href="{% url 'video_form' %}">Image/Video_Form</a>
     </li>
   </ul>
 
