--- a/faceapp/templates/base.html
+++ b/faceapp/templates/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Video Upload</title>
+    <title>Image/Video Upload</title>
   </head>
   <body>
     {% block content %}
