--- a/faceapp/videoapp/templates/videoapp/home.html
+++ b/faceapp/videoapp/templates/videoapp/home.html
@@ -15,4 +15,41 @@
       </li>
     {% endfor %}
   </ul>
+
+    <p>
+      <label>Faceplus Request</label>
+        <select id = "imgList" onchange="selectChange(this)">
+            <option value = "None">None</option>
+          {% for obj in video %}
+            <option value = "{{ obj.file }}">{{ obj.name }}</option>
+          {% endfor %}
+        </select>
+    </p>
+
+    <div class="append-div"></div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script>
+      $('#imgList').change(function(){
+        load($(this).val());});
+
+      function load(name_p)
+    {
+      $.ajax({
+      type:"POST",
+      url: "http://127.0.0.1:8000/api/faceplus/",
+      data: { path: name_p}
+      }).done(function(response){
+        var userDiv = "";
+        $.each(response.data, function(key, value){
+          console.log(value);
+          userDiv += '<div class="data">' + value + '</div>';
+        });
+        $(".append-div").append(userDiv)
+      });
+    }
+    </script>
 {% endblock %}
+
+
+
