--- a/faceapp/videoapp/templates/videoapp/home.html
+++ b/faceapp/videoapp/templates/videoapp/home.html
@@ -37,7 +37,8 @@
     {
       $.ajax({
       type:"POST",
-      url: "http://127.0.0.1:8000/api/faceplus/",
+      crossDomain: true,
+      url: "https://faceplus-243117.appspot.com/api/faceplus/",
       data: { path: name_p}
       }).done(function(response){
         var userDiv = "";
