media storage bucket updated

--- a/faceapp/videoapp/templates/videoapp/home.html
+++ b/faceapp/videoapp/templates/videoapp/home.html
@@ -38,7 +38,7 @@
       $.ajax({
       type:"POST",
       crossDomain: true,
-      url: "http://127.0.0.1:8000/api/faceplus/",
+      url: "https://faceplus-243117.appspot.com/api/faceplus/",
       data: { path: name_p}
       }).done(function(response){
         var userDiv = "";
